一、常规升级修复 1、升级api到34 2、修复搜索栏UI交互问题。 3、查看规则界面美化输出。 二、行为更改： 1、添加新规则后自动保存配置。 2、更改root获取方法，现在启动后只要后台不被杀死就只需要获取一次root权限。 3、应用规则后不再先显示规则被还原。

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -63,7 +63,7 @@
         </menu>
     </item>
     <item
-        android:id="@+id/action_rootmanager"
+        android:id="@+id/action_rulemanager"
         android:icon="@drawable/ic_task"
         android:title="@string/action_iptables"
         app:showAsAction="always">
