--- a/app/src/main/res/layout/fragment_iptables.xml
+++ b/app/src/main/res/layout/fragment_iptables.xml
@@ -6,10 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/blacktranslucent"
     android:orientation="vertical">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport= "true">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:fillViewport= "true">-->
+<!--        <HorizontalScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:scrollbars="horizontal"-->
+<!--            android:fadeScrollbars="false"-->
+<!--            >-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -18,15 +24,34 @@
             android:paddingTop="3dp"
             android:background="@color/blacktranslucent"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:typeface="monospace"
-                android:text="" />
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false">
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollbars="horizontal"
+            android:fadeScrollbars="false">
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:typeface="monospace"
+
+                        android:text="" />
+        </HorizontalScrollView>
+
+    </androidx.core.widget.NestedScrollView>
         </LinearLayout>
-    </ScrollView>
+<!--        </HorizontalScrollView>-->
+<!--    </ScrollView>-->
 </LinearLayout>
