--- a/app/src/main/res/layout/fragment_iptables.xml
+++ b/app/src/main/res/layout/fragment_iptables.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blacktranslucent"
@@ -19,8 +17,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="5dp"
             android:paddingTop="3dp"
             android:background="@color/blacktranslucent"
             android:orientation="vertical">
@@ -34,19 +32,41 @@
 
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="horizontal"
             android:fadeScrollbars="false">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
                     <TextView
                         android:id="@+id/textView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="18"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         android:textColor="@color/white"
                         android:typeface="monospace"
-                        android:text="" />
+                        android:includeFontPadding="false"
+                        android:lineSpacingMultiplier="0.96"
+                        android:ellipsize="end"
+                        />
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="82"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:typeface="monospace"
+                        android:includeFontPadding="false"
+                        android:lineSpacingMultiplier="1"
+                        android:ellipsize="end"
+                        />
+            </LinearLayout>
         </HorizontalScrollView>
 
     </androidx.core.widget.NestedScrollView>
