--- a/app/src/main/res/layout/fragment_iptables.xml
+++ b/app/src/main/res/layout/fragment_iptables.xml
@@ -4,24 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/blacktranslucent"
     android:orientation="vertical">
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:fillViewport= "true">-->
-<!--        <HorizontalScrollView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:scrollbars="horizontal"-->
-<!--            android:fadeScrollbars="false"-->
-<!--            >-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="10dp"
-            android:paddingEnd="5dp"
-            android:paddingTop="3dp"
-            android:background="@color/blacktranslucent"
-            android:orientation="vertical">
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
@@ -30,47 +12,22 @@
         android:scrollbars="vertical"
         android:fadeScrollbars="false">
 
-        <HorizontalScrollView
-            android:id="@+id/horizontalScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="horizontal"
-            android:fadeScrollbars="false">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="18"
-                        android:textSize="12sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:typeface="monospace"
-                        android:includeFontPadding="false"
-                        android:lineSpacingMultiplier="0.96"
-                        android:ellipsize="end"
-                        />
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="82"
-                        android:textSize="12sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:typeface="monospace"
-                        android:includeFontPadding="false"
-                        android:lineSpacingMultiplier="1"
-                        android:ellipsize="end"
-                        />
-            </LinearLayout>
-        </HorizontalScrollView>
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="horizontal"
+        android:fadeScrollbars="false">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:paddingTop="0dip"
+            android:paddingBottom="36dip" />
 
+    </HorizontalScrollView>
     </androidx.core.widget.NestedScrollView>
-        </LinearLayout>
-<!--        </HorizontalScrollView>-->
-<!--    </ScrollView>-->
 </LinearLayout>
